# mitmh-2024-pre-posthunt

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-hunt-reg.yml  build-push.yml  build-registration.yml  deploy-branch-backend.yml  deploy-branch.yml  deploy-posthunt-staging.yml  deploy-prod.yml  deploy-registration-staging.yml  deploy-staging.yml  deploy-testing.yml  deploy.yml  docker-buildx.yml  refresh-assets-branch.yml  refresh-assets-staging.yml  refresh-assets.yml  unittests.yml
.pre-commit/: pre-commit.Dockerfile
client/: .prettierrc.js  README.md  index.d.ts  next.config.js  package-docs.md  package.json  patch.sh  tailwind.config.js
client/components/: accordion.tsx  appendix.tsx  aspect_ratio.tsx  attributions.tsx  audio_link.tsx  authors_notes.tsx  (+61 more)
deploy/: Caddyfile.dev  Caddyfile.prod  README.md  docker-compose.branch.backend.yml  docker-compose.branch.yml  docker-compose.dev.full.yml  docker-compose.dev.yml  docker-compose.env.yml  docker-compose.force-dev.yml  docker-compose.posthunt.yml  docker-compose.registration.yml  docker-compose.registry.yml  docker-compose.staging.localhost.yml  docker-compose.staging.yml  docker-compose.testing.yml  docker-compose.unittests.yml  postgresql.default.conf  postgresql.prod.conf  prune_test_frontends  refresh.sh  supervisord.dev.conf  supervisord.prod.conf
doc/: deploys.md  faq.md  index.md  mystery_hunt.md
posthunt/: dump_posthunt_fixtures.sh  make_posthunt_access_fixtures.py
reg-client/: index.d.ts  next.config.js  package.json
scripts/: api-ws-load-test.js  create_icons  create_new_puzzle  docker_compose  get_reg_data  initialize_dev  initialize_staging  initialize_staging_localhost  load_fixtures  make_migrations  postprocess_wasm  pre-commit  rclone.conf  reformat  run_tests  save_fixtures  save_positions  sync_media  tail_docker_logs  tail_tph_logs  teardown
server/: README.md  create_pyodide_database.py  manage.py  pyodide_entrypoint.py
server/poetry/: pyproject.toml
(+1161 files in other folders)
