# This file should just be used for managing Python dependencies. Making a
# change will cause Docker to reinstall all dependencies. If adding a package
# for a specific puzzle, please add a comment.

# Put tool configurations in the root of tph-site.

[tool.poetry]
name = "mythstory-site"
version = "0.0.0"
description = "MITMH 2024 webapp"
authors = ["TTBNL"]

# Requirements
[tool.poetry.dependencies]
python = "==3.11.3"
celery = "==5.3.6"
channels = "==4.0.0"
channels-redis = "==4.1.0"
cryptography = "==41.0.7"  # will use
"discord.py" = "==2.3.2"
Django = "==5.0.1"
django-anymail = "==10.2"
django-bleach = "==3.1.0"
django-celery-results = "==2.5.1"
django-extensions = "==3.2.3"
django-impersonate = "==1.9.2"
django-phonenumber-field = {version = "==7.1.0", extras = ["phonenumberslite"]}
django-prometheus = "==2.3.1"
django-ratelimit = "==4.1.0"
django-storages = {version="==1.14.2", extras = ["google"]}
html2text = "==2020.1.16"
IMAPClient = "==2.3.1"
joblib = "==1.3.2"
Markdown = "==3.5.1"
numpy = "==1.26.2"
Pillow = "==10.1.0" # sync-media
polygenerator = "==0.2.0"
psycopg2 = "==2.9.9"  # Consider psycopg3
python-dateutil = "==2.8.2"
pytz = "==2023.3.post1"
pyyaml = "==6.0.1"
redis = "==5.0.1"
requests = "==2.31.0"
sentry-sdk = {version = "==1.39.1", extras=["django"]}
ujson = "==5.9.0"
unidecode = "==1.3.7"
uvicorn = {version = "==0.25.0", extras = ["standard"]}
whitenoise = {version = "==6.6.0", extras = ["brotli"]}

# List of optional requirements for full server dependencies
[tool.poetry.extras]
full = []

# Dev Requirements
[tool.poetry.dev-dependencies]
black = "==23.12.0"
django-silk = "==5.0.4"
djhtml = "==3.0.6"
mypy = "==1.7.1"
ruff = "==0.1.8"
django-stubs = { version = "^4.2.1", extras = ["compatible-mypy"] }
types-Markdown = "^3.5.0"
types-python-dateutil = "^2.8.19"
types-requests = "^2.31.0"
types-redis = "^4.6.0"
types-ujson = "^5.9.0"
djangorestframework-stubs = { version = "^3.14.1", extras = ["compatible-mypy"] }
